chore: update style

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -283,6 +283,8 @@ $gt-size-avatar-mobi := em(32px)
           top: em(7px)
   /* header */
   .gt-header
+    padding-top: em(20px)
+    padding-bottom: em(10px)
     position: relative
     display: flex
     &-comment
@@ -360,7 +362,6 @@ $gt-size-avatar-mobi := em(32px)
 
   /* comments */
   .gt-comments
-    padding-top: em(20px)
     &-null
       text-align: center
     &-controls
